# catyas

./: .electron-vite.config.js  .gitignore  CMakeLists.txt  DEV_MODES.md  README.md  build_linux.sh  build_windows.bat  clean.bat  conanfile.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
.claude/: settings.local.json
electron/: main.ts  mysqlDialog.ts  preload.cjs  preload.cts  preload.ts
electron/windows/: mysqlConnectionDialog.ts
include/database/: DatabaseConnection.h
include/ui/: DatabaseTreeWidget.h  MainWindow.h  NewConnectionDialog.h  TableDataWidget.h  TableListWidget.h
resources/: catyas.qrc
resources/styles/: catyas.qss
src/: App.tsx  electron.d.ts  i18n.ts  index.css  main.cpp  main.tsx  router.tsx
src/components/: ConnectionDialogBase.tsx  LanguageSwitcher.tsx  MainContent.tsx  MariaDBConnectionDialog.tsx  MonacoSqlEditor.tsx  MongoDBConnectionDialog.tsx  MySQLConnectionDialog.tsx  OptionsDialog.tsx  OracleConnectionDialog.tsx  PostgreSQLConnectionDialog.tsx  RedisConnectionDialog.tsx  RightInfo.tsx  SQLServerConnectionDialog.tsx  SQLiteConnectionDialog.tsx  Sidebar.tsx  SqlEditor.tsx  TabbedView.tsx  TableList.tsx  TableView.tsx  Titlebar.tsx  TitlebarMacOS.tsx  TitlebarWindows.tsx  TopRibbon.tsx  topBarConfig.ts
src/components/DataTransferWizard/: ConnectionSelector.tsx  Step1SelectSource.tsx  Step2SelectObjects.tsx  WizardFooter.tsx  index.tsx
src/config/: menuConfig.json
src/contexts/: ThemeContext.tsx
src/database/: DatabaseConnection.cpp
src/lib/database/: index.ts
src/lib/database/adapters/: mongodb.ts  mysql.ts  postgresql.ts  redis.ts  sqlite.ts
src/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  ru.json  zh-CN.json
src/main/: main.ts  menu.ts
src/main/database/: DatabaseManager.ts
src/main/database/connections/: MongoDBConnection.ts  MySQLConnection.ts  PostgreSQLConnection.ts  RedisConnection.ts  SQLiteConnection.ts
src/main/preload/: preload.ts
src/main/utils/: env.ts
src/pages/: MySQLConnectionPage.tsx
src/renderer/: App.tsx  index.css  index.html  main.tsx
src/renderer/components/: ConnectionDialog.tsx  ConnectionTree.tsx  DatabaseTables.tsx  Header.tsx  LocaleProvider.tsx  MainContent.tsx  QueryEditor.tsx  Sidebar.tsx  TableView.tsx  Toolbar.tsx  TopRibbon.tsx
src/renderer/hooks/: useI18n.ts
src/renderer/i18n/: index.ts
src/renderer/i18n/locales/: en-US.json  ja-JP.json  zh-CN.json
src/renderer/store/: connectionStore.ts
src/renderer/types/: database.ts
src/types/: database-drivers.d.ts  index.ts  menu.ts
src/ui/: DatabaseTreeWidget.cpp  MainWindow.cpp  NewConnectionDialog.cpp  TableDataWidget.cpp  TableListWidget.cpp
tests/: CMakeLists.txt
translations/: catyas_en.ts  catyas_zh_CN.ts
